chandeliers-lus/tests/fail/ui/tc/builtin/float-in.rs
chandeliers_lus::decl! {
    node main() returns ();
    var x : float;
    let
        x = float(1, 2);
    tel
}

fn main() {}
