chandeliers-lus/tests/fail/ui/tc/builtin/float-in.stderr
error: Builtin function `float` expects exactly one argument
 --> tests/fail/ui/tc/builtin/float-in.rs:5:13
  |
5 |         x = float(1, 2);
  |             ^^^^^^^^^^^
